# pythobets

./: CONTRIBUTING.md  LICENSE  README.md  compose-dev.yaml  dockerfile  pyproject.toml  requirements.txt
pythobets/: cli.py  configuration.py  main.py  pythobets.py  requirements.txt  update_odds.py  update_predictions.py
