[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythobets"
version = "0.1.0"
description = "A CLI Python app that assists with sports betting"
authors = [{name = "Jason Rodriguez", email = "jasonrodriguez1474@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "certifi==2022.12.7",
    "charset-normalizer==2.1.1",
    "click==8.1.3",
    "idna==3.4",
    "requests==2.28.1",
    "urllib3==1.26.13"
]